Implement Light/Dark mode across all pages and update project rules

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
                 <li><a href="#contact">تماس با ما</a></li>
             </ul>
             <div class="nav-cta">
+                <button id="theme-toggle" class="theme-toggle" aria-label="تغییر تم">
+                    <i data-lucide="moon"></i>
+                </button>
                 <a href="#contact" class="btn btn-primary">ثبت سفارش</a>
             </div>
             <div class="hamburger">
