--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazirmatn@v33.003/Vazirmatn-font-face.css" rel="stylesheet"
         type="text/css" />
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/reveal.css">
     <script src="https://unpkg.com/lucide@latest"></script>
 </head>
 
